Troca de banco para modelagem e Controle vagasCarro

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:~/empresaEstacionamento
+spring.datasource.url=jdbc:h2:file:~/empresaEstacionamento1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql=true
